# pyarmor_example

./: README.md  pyproject.toml
ira/example/: __init__.py  main.py
tests/: test_main.py
